# AnaemiaDetection

./: README.md  anaemia-detection.ipynb  app.py  main.py  pyproject.toml  replit.nix
static/css/: style.css
templates/: index.html
